tests/invalid/missing_paren.c
int main( {
    return 0;
}
// ERROR: Line 1, Error 2005